# hackaton-kick-off

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_b1_expected_answer.py  0003_a3_session_timer.py  0004_c7_llm_usage.py  0005_p2_hash_paste.py  0006_session_mode.py  0007_roles_assignments.py  0008_coding_language_per_item.py  0009_assignment_voice_model.py  0010_summary_final_verdict.py
backend/app/: auth.py  config.py  db.py  lang_detect.py  logging_setup.py  main.py  models.py  schemas.py
backend/app/llm/: client.py  cost_tracker.py  evaluate.py  extract.py  generate.py  prompt_schemas.py  prompts.py  realtime.py  voice.py
backend/app/llm/prompt_templates/: code_review.md  coding_task.md  coding_tasks.md  extract.md  realtime_interviewer.md  summary.md  topic_questions.md  voice_eval.md
backend/app/reports/: pdf.py
backend/app/routers/: admin.py  analytics.py  auth.py  interview_ws.py  me.py  requirements.py  sessions.py
backend/app/sandbox/: runner.py
backend/scripts/: reset_demo.ps1  reset_demo.sh  reset_demo.sql
doc/: QUICKSTART.md  example-requirements-fleetops.md  example-requirements-mediconnect.md  example-requirements.md  improvements.md  redisign_requirements.md  ТЗ Сервис подготовки специалистов к кик-оффам.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.js  (+4 more)
qa/: qa-functional.md
(+74 files in other folders)
