[project]
name = "kickoff-backend"
version = "0.1.0"
description = "Kick-off prep service backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "openai>=1.54",
    "python-multipart>=0.0.12",
    "websockets>=13",
]

[tool.ruff]
line-length = 100
target-version = "py312"
